# simplefs

scripts/: debian-bootstrap.sh  mount-and-serve.sh  unmount.sh
simplefs/: Cargo.toml
simplefs-fuse/: Cargo.toml  wrapper.h
simplefs-fuse/src/: lib.rs
simplefs/examples/: hello.rs
simplefs/src/: fs.rs
simplefs/src/cmd/: main.rs  utils.rs
